Added a corp history as a modal that is brought up by clicking the corp name on the skills page The corp history page obeys the red flag list and will make any corp who is on that list red.

--- a/audit.style.css
+++ b/audit.style.css
@@ -372,3 +372,17 @@ table.fancy tr:hover th[scope=row], table.fancy tr:hover td
 {
   background-color: #224466;
 }
+.corpHistoryTable
+{
+	overflow-y: auto;
+	overflow-x: hidden;
+	height: 200px;
+}
+.corpHistoryTable table tr td
+{
+	color: green !important;
+}
+.corpHistoryTable table tr.red td
+{
+	color: darkred !important;
+}
